tests/snapshots/integration__integration_tests__switch__switch_no_config_commands_with_force.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - force-no-config-commands
    - "--force"
    - "--no-config-commands"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp58teba
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpnE4vcU/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1mforce-no-config-commands[0m at [REPO].force-no-config-commands[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
